tests/ucc/bind/good/break-in-do-while.c
int main(void)
{
    int a = 0;

    do
    {
        break;
    } while (a);
}
