tests/ucc/bind/bad/break-in-main.c
int main(void)
{
    int a = 0;

    break;

    return a;
}
